<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SoundIT</string>
    <string name="app_id">422050304553581</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_add_song">Add Song</string>
    <string name="menu_about">About</string>
    <string name="menu_checkout">Check out</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_search">Search</string>
    <string name="error_no_data">Error: no data found</string>
    <string name="list_loading_data">Loading data</string>
    <string name="toast_song_added_to_queue">Song added to queue </string>
    <string name="toast_song_already_in_queue">Song already in queue</string>
    <string name="toast_check_in_fail">Check in failed. </string>
    <string name="toast_check_out">Checked out successfully</string>
    <string name="toast_check_out_inactive">The location you are checked into is no longer active</string>
    <string name="current_playing">Now Playing </string>
    <string name="song_list_next">Next Song</string>
    <string name="song_list_votes">Votes</string>
    <string name="activity_title_add_song">Add Song</string>
    <string name="activity_login_title">Login</string>
    <string name="activity_checkin_title">CheckIn</string>
    <string name="button_login">Take me to the music!</string>
    <string name="dialog_login_message">Logging in. </string>
    <string name="dialog_checkin_message">Please wait.</string>
    <string name="dialog_login_title">Login </string>
    <string name="dialog_checkin_title">Checking in. </string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="alert_dialog_logout_title">Logout</string>
    <string name="alert_dialog_logout_message">Are you sure you want to log out?</string>
    <string name="alert_dialog_logout_ok">Logout</string>
    <string name="alert_dialog_checkout_title">Checkout</string>
    <string name="alert_dialog_checkout_message">Are you sure you want to leave?</string>
    <string name="alert_dialog_checkout_ok">Leave</string>
    <string name="alert_dialog_no_locations_title">No Locations available</string>
    <string name="alert_dialog_no_locations_message">Sorry. No SoundIT locations are available in your area. </string>
    <string name="add_song_search_query_hint">Search for Song</string>

</resources>