<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_settings"
        android:visible="false"/>
    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:title="@string/menu_refresh"/>
    <item
        android:id="@+id/menu_check_out"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_checkout"/>
    <item
        android:id="@+id/menu_logout"
        android:orderInCategory="101"
        android:showAsAction="never"
        android:title="@string/menu_logout"/>
    <item
        android:id="@+id/menu_add_song"
        android:icon="@drawable/ic_action_add_song"
        android:orderInCategory="2"
        android:showAsAction="ifRoom"
        android:title="@string/menu_add_song"/>
    <item
        android:id="@+id/menu_about"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_about"
        android:visible="false"/>

</menu>